--- a/package.json
+++ b/package.json
@@ -8,13 +8,20 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "bootstrap": "^4.1.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-cookie": "^3.0.4",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
+    "react-validation": "^3.0.7",
     "reactstrap": "^6.5.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "validator": "^13.5.2",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
@@ -41,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.9"
   }
 }
