--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^4.0.3",
+    "react-toastify": "^7.0.4",
     "react-validation": "^3.0.7",
     "reactstrap": "^6.5.0",
     "redux": "^4.0.5",
