--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@progress/kendo-react-dateinputs": "^4.5.0",
+    "@progress/kendo-react-treeview": "^4.5.0",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-cookie": "^3.0.4",
+    "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-image-file-resizer": "^0.4.3",
     "react-redux": "^7.2.3",
