--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
+    "react-checkbox-list": "0.0.2",
     "react-cookie": "^3.0.4",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
