Added location pagination component

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-cookie": "^3.0.4",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
+    "react-flags": "^0.1.18",
     "react-image-file-resizer": "^0.4.3",
     "react-redux": "^7.2.3",
     "react-router-dom": "^4.3.1",
